[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Popup"]
pause_mode = 2
rect_pivot_offset = Vector2( 32, 45 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
text = "Pause"
align = 1
uppercase = true

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 38.0
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 64.0
margin_bottom = 62.0
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 64.0
margin_bottom = 86.0
text = "Quit"
